fixed image-wrapped

--- a/styles.css
+++ b/styles.css
@@ -314,12 +314,14 @@ main h1.title {
     font-family: Arial, sans-serif;
     font-size: 1.5rem;
     font-weight: bold;
+    flex-shrink: 0;
 }
 
 .temp-humidity-row .humidity-value {
     font-family: Arial, sans-serif;
     font-size: 1.5rem;
     font-weight: bold;
+    flex-shrink: 0;
 }
 
 .buttons-row {
@@ -454,7 +456,7 @@ main h1.title {
     display: none;
     width: 100%;
     margin-top: 20px;
-    padding: 0 70px;
+    padding: 0 20px;
     padding-left: 0;
     justify-content: space-between;
 }
